<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 Ushahidi.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU Affero General Public License as published by the Free
  ~ Software Foundation, either version 3 of the License, or (at your option)
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program in the file LICENSE-AGPL. If not, see
  ~ https://www.gnu.org/licenses/agpl-3.0.html
  -->

<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name_ushahidi">Ushahidi</string>

    <string name="empty_list">Empty list.</string>
    <string name="required_field_error">This field is required.</string>
    <!--Exception messages -->
    <string name="exception_message_generic">Oops, an application error occurred.</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_deployment_not_found">Deployment not found.</string>
    <string name="exception_message_deployment_not_added">Could not add the deployment.</string>

    <!-- Add Deployment -->
    <string name="add_deployment_title_hint">The title of the deployment</string>
    <string name="add_deployment_description_hint">Please enter details of the deployment.</string>
    <string name="add_deployment_url_hint">The API URL of the deployment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="menu_create_account">Create account</string>
    <string name="menu_sign_in">Sign in</string>
    <string name="add_deployment_actionbar_title">Add Deployment</string>
    <string name="add_deployment_empty_title">Please enter a title for your deployment</string>
    <string name="search_for_deployment_actionbar_title">Search for a deployment</string>
    <string name="update_deployment">Update Deployment</string>

    <!-- List Deployments -->
    <string name="list_posts">List Posts</string>

    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="update">Update</string>
    <string name="selected">%1$d selected</string>
    <string name="delete">Delete</string>
    <string name="items_deleted">%1$d deleted</string>
    <string name="swipe_deleted_items">%1$s deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">Undo</string>
    <string name="open">Open</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="posts">Posts</string>
    <string name="deployment_management">Deployment Management</string>
    <string name="deployment">Deployment</string>
    <string name="search_hint">Search by deployment title</string>
    <string name="manage_deployments">Manage deployments</string>
    <string name="send_feedback">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_login">Select A Deployment To Login to</string>
    <string name="empty_post_list"><b>No posts</b>\n\nPull down on the <b>screen</b> to fetch new posts.</string>
    <string name="post_not_found"><b>No post found</b>\n\nPlease try again with a different search term.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="select_deployment">Select A Deployment</string>
    <string name="login_empty_username">Please enter your deployment account\'s username</string>
    <string name="login_empty_password">Please enter your deployment account\'s password</string>
    <string name="set">Set</string>
    <string name="general_settings">General Settings</string>
    <string name="build_date">Build date</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="device_info">Device info</string>
    <string name="other">Other</string>
    <string name="suggestion">Suggestion</string>
    <string name="problem">Problem</string>
    <string name="launching_email_client">Opening email client…</string>
    <string name="failed_launching_email_client">"Couldn't open an email client"</string>
    <string name="could_not_get_device_info">"Couldn't get device info"</string>
    <string name="device_os">OS</string>
    <string name="device_brand">Brand</string>
    <string name="device_manufacturer">Manufacturer</string>
    <string name="device_model">Model</string>
    <string name="search_posts">Search Posts</string>
    <string name="login_failed">Login failed, check your username and password.</string>
    <string name="retry">Retry</string>

    <!-- enable auto sync -->
    <string name="chk_enable_auto_sync">Enable Auto Sync</string>
    <string name="chk_enable_auto_sync_hint">Allow the app to periodically push and pull data the platform.</string>

    <!-- auto sync delay -->
    <string name="auto_sync_delay">Auto sync frequency</string>
    <string name="auto_sync_delay_hint">Set how often the synchronizes with the configured the platform</string>
</resources>
