<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Ushahidi.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU Affero General Public License as published by the Free
  ~ Software Foundation, either version 3 of the License, or (at your option)
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program in the file LICENSE-AGPL. If not, see
  ~ https://www.gnu.org/licenses/agpl-3.0.html
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_settings">
        <CheckBoxPreference
                android:key="auto_sync_preference"
                android:summary="@string/chk_enable_auto_sync_hint"
                android:title="@string/chk_enable_auto_sync"/>
        <com.ushahidi.android.ui.widget.TimePickerPreference
                android:dialogTitle="@string/auto_sync_delay"
                android:key="auto_sync_times"
                android:summary="@string/auto_sync_delay_hint"
                android:title="@string/auto_sync_delay"
                android:dependency="auto_sync_preference"/>
    </PreferenceCategory>
</PreferenceScreen>