<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2015 Ushahidi.
  ~
  ~   This program is free software: you can redistribute it and/or modify it under
  ~   the terms of the GNU Affero General Public License as published by the Free
  ~   Software Foundation, either version 3 of the License, or (at your option)
  ~   any later version.
  ~
  ~   This program is distributed in the hope that it will be useful, but WITHOUT
  ~   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~   FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
  ~
  ~   You should have received a copy of the GNU Affero General Public License
  ~   along with this program in the file LICENSE-AGPL. If not, see
  ~   https://www.gnu.org/licenses/agpl-3.0.html
  ~
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:ushahidiApp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter_posts"
        android:title="@string/sort"
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="1"
        ushahidiApp:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_sort_by_title"
                android:title="@string/sort_by_title"/>
            <item
                android:id="@+id/menu_sort_by_date"
                android:title="@string/sort_by_date"/>
        </menu>
    </item>

</menu>