<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Ushahidi.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU Affero General Public License as published by the Free
  ~ Software Foundation, either version 3 of the License, or (at your option)
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program in the file LICENSE-AGPL. If not, see
  ~ https://www.gnu.org/licenses/agpl-3.0.html
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ushApp="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/element_spacing_normal"
            android:animateLayoutChanges="true">

            <com.ushahidi.android.ui.widget.FontSupportedTextView
                android:id="@+id/textview_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_login"
                android:padding="@dimen/element_spacing_normal"
                android:textStyle="bold"
                ushApp:fontFile="RobotoCondensed-Regular.ttf"/>

            <com.ushahidi.android.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal"
                ushApp:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"
                    ushApp:emptyErrorString="@string/login_empty_username"
                    android:nextFocusDown="@+id/login_password"/>

            </com.ushahidi.android.ui.widget.FloatLabelLayout>

            <com.ushahidi.android.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal"
                ushApp:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <com.andreabaccega.widget.FormEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    ushApp:emptyErrorString="@string/login_empty_password"/>

            </com.ushahidi.android.ui.widget.FloatLabelLayout>

            <com.ushahidi.android.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal"
                ushApp:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <com.andreabaccega.widget.FormAutoCompleteTextView
                    android:id="@+id/active_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    ushApp:testType="email"/>

            </com.ushahidi.android.ui.widget.FloatLabelLayout>

            <com.ushahidi.android.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing_normal"
                ushApp:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <Spinner
                    android:id="@+id/select_deployment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_deployment"
                    android:spinnerMode="dropdown"
                    style="@style/Ushahidi.Widget.Spinner"
                    android:prompt="@string/select_deployment"/>

            </com.ushahidi.android.ui.widget.FloatLabelLayout>

            <RadioGroup
                android:id="@+id/login_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/content_padding_normal">

                <RadioButton
                    android:id="@+id/radio_btn_login"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/radio_btn_register"
                    android:text="@string/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarStyle">

        <Button
            android:id="@+id/login_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/theme_accent_2"
            style="?android:buttonBarButtonStyle"/>

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"/>

    </LinearLayout>

</LinearLayout>